# mypage

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.app.json  vite.config.ts
.idx/: dev.nix
backend/: exceptions.py  insert_data.py  reset_database.py  settings.py  table_utils.py  urls.py
backend/backend/: settings.py
backend/model/: api_view.py  models.py  serializers.py
backend/model/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_model.py
src/: App.vue  Modal.vue  api.ts  directives.ts  icons.ts  interfaces.ts  main.ts  style.css  utils.ts
src/components/: Modal.vue
